--- a/client/main.html
+++ b/client/main.html
@@ -1,7 +1,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Morning 5 - take 5 minutes to plan your day</title>
+  <title>Electrhome - votre consommation électrique intelligente</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
  
